DBMS/logs/disaster_management.log
2025-10-03 00:16:44,726 ERROR: Exception on /resource/new [POST] [in C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py:825]
Traceback (most recent call last):
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\app\routes.py", line 17, in decorated_function
    return f(*args, **kwargs)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\app\routes.py", line 234, in new_resource
    resource = Resource(type=form.type.data, team_id=form.team_id.data if form.team_id.data else None)
  File "<string>", line 4, in __init__
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\sqlalchemy\orm\state.py", line 571, in _initialize_instance
    with util.safe_reraise():
         ~~~~~~~~~~~~~~~~~^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py", line 224, in __exit__
    raise exc_value.with_traceback(exc_tb)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\sqlalchemy\orm\state.py", line 569, in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py", line 2179, in _declarative_constructor
    raise TypeError(
        "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
    )
TypeError: 'team_id' is an invalid keyword argument for Resource
2025-10-03 00:16:44,738 ERROR: Server Error: 500 Internal Server Error: The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application. [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:66]
2025-10-03 00:17:14,833 ERROR: Exception on /evacuation/new [GET] [in C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py:825]
Traceback (most recent call last):
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 1455, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 869, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 867, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\app.py", line 852, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\app\routes.py", line 17, in decorated_function
    return f(*args, **kwargs)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\app\routes.py", line 460, in new_evacuation
    return render_template('evacuation_form.html', title='New Evacuation', form=form)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\flask\templating.py", line 151, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\.venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\Asus\OneDrive\Desktop\DBMS\app\templates\evacuation_form.html", line 33, in template
    {{ form.area_id.label(class="form-label") %}
    ^
jinja2.exceptions.TemplateSyntaxError: unexpected '}'
2025-10-03 00:17:14,844 ERROR: Server Error: 500 Internal Server Error: The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application. [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:66]
2025-10-03 00:19:02,351 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:26:13,365 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:49:00,447 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:49:15,409 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:49:58,633 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:50:24,611 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:52:41,582 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:53:02,103 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:54:41,376 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 00:55:10,653 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 01:00:51,744 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-03 11:36:20,823 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-04 00:54:12,666 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-07 00:51:12,900 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-07 22:55:15,930 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-07 23:29:42,315 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-07 23:38:29,620 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-08 08:57:23,676 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-08 10:37:49,334 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-28 10:19:16,691 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-28 12:30:08,493 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
2025-10-29 23:26:04,320 INFO: Disaster Management startup [in C:\Users\Asus\OneDrive\Desktop\DBMS\app\__init__.py:41]
